Removed the usage of hotplug
Hotplug is not used by this module. Increased the version to 1.0.1

--- a/bluetoothlowenergy/config.json
+++ b/bluetoothlowenergy/config.json
@@ -1,4 +1,5 @@
 {
+	"version": "1.0.1",
 	"logLevel": 5,
 	"activityLength": 100,
 	"platform": "", //Used to identify platform so that module can adapt and run automagically
