pass the hci deviceID through configuration file

--- a/bluetoothlowenergy/config.json
+++ b/bluetoothlowenergy/config.json
@@ -1,7 +1,8 @@
 {
+    "hciDeviceID": 1,
 	"version": "1.0.2",
 	"logLevel": 5,
 	"activityLength": 100,
-	"platform": "", //Used to identify platform so that module can adapt and run automagically
+	"platform": "",
 	"serialNumber": "WWRL000000"
 }
