--- a/relay-term/package.json
+++ b/relay-term/package.json
@@ -13,7 +13,7 @@
   "private": true,
   "dependencies": {
     "ws": "^7.4.2",
-    "node-pty": "^0.9.0",
+    "node-pty-prebuilt-multiarch": "^0.9.0",
     "jsonschema": "^1.4.0"
   },
   "engines": {}
