By default, route traffic through edge-proxy

--- a/relay-term/config/config.json
+++ b/relay-term/config/config.json
@@ -1,5 +1,5 @@
 {
-    "cloud": "wss://cloud.laptop:8443/relay-term",
+    "cloud": "http://gateways.local:8080/relay-term",
     "noValidate": true,
     "certificate": "",
     "key": ""
